--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -57,7 +57,7 @@ jobs:
 
     runs-on: ubuntu-20.04
     env:           
-      DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }} 
+      DOCKER_IMAGE: env.DOCKER_IMAGE
   
 
     steps:
@@ -104,7 +104,7 @@ jobs:
 
     runs-on: ubuntu-20.04
     env:           
-      DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }} 
+      DOCKER_IMAGE: env.DOCKER_IMAGE
   
 
     steps:
