--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       # https://github.com/docker/setup-qemu-action
+      
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
       # https://github.com/docker/setup-buildx-action
@@ -35,8 +36,18 @@ jobs:
       id: buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: login to docker hub
-      run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+    # - name: login to docker hub
+    #   run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+
+    - uses: pguyot/arm-runner-action@v2
+      id: build_image
+      with:
+        base_image: dietpi:rpi_armv8_bullseye
+        commands: |
+            commands to build image
+
+
 
     - name: build the image
       run: |
