trying to fix drive adafruith, change build process image.

--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -11,6 +11,23 @@ jobs:
   build:
 
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        arch: [armv6l, armv7l, aarch64]
+        include:
+        - arch: armv6l
+          cpu: arm1176
+          base_image: raspios_lite:latest
+          cpu_info: cpuinfo/raspberrypi_zero2_w_arm64
+        - arch: armv7l
+          cpu: cortex-a7
+          base_image: raspios_lite:latest
+          cpu_info: raspberrypi_3b
+        - arch: aarch64
+          cpu: cortex-a53
+          base_image: raspios_lite_arm64:latest
+          cpu_info: cpuinfo/raspberrypi_4b
+
     env:           
       DOCKER_IMAGE: bhpdocker/terrarium_target 
   
@@ -40,22 +57,22 @@ jobs:
     #   run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
 
-    - uses: pguyot/arm-runner-action@v2
-      id: build_image
-      with:
-        base_image: dietpi:rpi_armv8_bullseye
-        commands: |
-            docker buildx build \
-            --tag ${{ env.DOCKER_IMAGE }} \
-            --platform linux/arm64  .
+    # - uses: pguyot/arm-runner-action@v2
+    #   id: build_image
+    #   with:
+    #     base_image: dietpi:rpi_armv8_bullseye
+    #     commands: |
+    #         docker buildx build \
+    #         --tag ${{ env.DOCKER_IMAGE }} \
+    #         --platform linux/arm64  .
 
 
 
-    # - name: build the image
-    #   run: |
-    #     docker buildx build \
-    #       --tag ${{ env.DOCKER_IMAGE }} \
-    #       --platform linux/arm64  .
+    - name: build the image
+      run: |
+        docker buildx build \
+          --tag ${{ env.DOCKER_IMAGE }} \
+          --platform linux/arm64  .
 
 
 
