--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -124,22 +124,22 @@ jobs:
     runs-on: ubuntu-20.04
     needs: [test]
 
-    strategy:
-      matrix:
-        arch: [armv6l, armv7l, aarch64]
-        include:
-        - arch: armv6l
-          cpu: arm1176
-          base_image: raspios_lite:latest
-          cpu_info: cpuinfo/raspberrypi_zero2_w_arm64
-        - arch: armv7l
-          cpu: cortex-a7
-          base_image: raspios_lite:latest
-          cpu_info: raspberrypi_3b
-        - arch: aarch64
-          cpu: cortex-a53
-          base_image: raspios_lite_arm64:latest
-          cpu_info: cpuinfo/raspberrypi_4b
+    # strategy:
+    #   matrix:
+    #     arch: [armv6l, armv7l, aarch64]
+    #     include:
+    #     - arch: armv6l
+    #       cpu: arm1176
+    #       base_image: raspios_lite:latest
+    #       cpu_info: cpuinfo/raspberrypi_zero2_w_arm64
+    #     - arch: armv7l
+    #       cpu: cortex-a7
+    #       base_image: raspios_lite:latest
+    #       cpu_info: raspberrypi_3b
+    #     - arch: aarch64
+    #       cpu: cortex-a53
+    #       base_image: raspios_lite_arm64:latest
+    #       cpu_info: cpuinfo/raspberrypi_4b
 
 
     env:           
