--- a/.github/workflows/terra.yml
+++ b/.github/workflows/terra.yml
@@ -54,10 +54,10 @@ jobs:
       id: buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install pylint
   
     - name: Analysing the code with pylint
       run: |
